src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>BillingLink__c</fullName>
        <description>If the account requires to send an invoice on their web portals</description>
        <label>Billing Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BillingPolicy__c</fullName>
        <description>Instructions on how the account should be billed</description>
        <label>Billing Policy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BusinessHours__c</fullName>
        <label>Business Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CallAppointment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This lets technicians know if they need to call the client and confirm an appointment prior to completing installation. 
&quot;True&quot; = Must Call Ahead, False = Don&apos;t need to call ahead</description>
        <label>Call for appointment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChainBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chain / Banner ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ChainID__c</fullName>
        <description>Hidden fields for importation</description>
        <externalId>true</externalId>
        <label>ChainID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CrossStreet__c</fullName>
        <description>Help Installer to find adresses</description>
        <label>Cross Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExcludedItemType__c</fullName>
        <label>Excluded Item Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ItemType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedPatientType__c</fullName>
        <label>Excluded Patient Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PatientType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedProductType__c</fullName>
        <label>Excluded Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProductType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedTopic__c</fullName>
        <label>Excluded Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NoPhoto__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberDisplay__c</fullName>
        <label>Number of displays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberDoctors__c</fullName>
        <label>Number of Doctors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberPharmacist__c</fullName>
        <label>Number of Pharmacist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SiteID__c</fullName>
        <description>Hidden fields for Import</description>
        <externalId>true</externalId>
        <label>SiteID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoreNumber__c</fullName>
        <description>Used for chains only (e.g - Rexall Store #NNN).</description>
        <label>Store number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sub Type 1</fullName>
                </value>
                <value>
                    <fullName>FHT</fullName>
                </value>
                <value>
                    <fullName>CLSC</fullName>
                </value>
                <value>
                    <fullName>CSSS</fullName>
                </value>
                <value>
                    <fullName>PCN</fullName>
                </value>
                <value>
                    <fullName>GMF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalNdmDistribution__c</fullName>
        <description>Total number of contacts available for the distribution of the Non Display Materials</description>
        <label>Total number of contacts for NDM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllSites</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>StoreNumber__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>SubType__c</columns>
        <columns>Territory__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Sites</value>
        </filters>
        <label>All Sites</label>
    </listViews>
    <listViews>
        <fullName>AllSponsors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Sponsors</value>
        </filters>
        <label>All Sponsors</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Sites</fullName>
        <active>true</active>
        <label>Sites</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsors</fullName>
        <active>true</active>
        <label>Sponsors</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>